support `preserve_recipients` parameter in mandrill mailer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hydreflab/laravel-mailer",
+    "name": "acabala/laravel-mailer",
     "authors": [
         {
             "name": "Michał Golon",
