--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/console": "5.*",
-        "illuminate/support": "5.*"
+        "illuminate/console": "~5.0",
+        "illuminate/support": "~5.0"
     },
     "suggest": {
         "weblee/mandrill": "Required if Mandrill mailer will be used",
